--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,13 @@ html {
 }
 
 body {
-    
+
     background-image: url(../imagenes/low-poly-grid-haikei.svg);
     color: white;
     font-family: 'Raleway', sans-serif;
     min-height: 100%;
 }
+
 h1 {
     font-family: 'Mukta', sans-serif;
     display: inline-block;
@@ -26,48 +27,32 @@ a {
     color: white;
 }
 
-
-
-/*Comienzo de css pagina contactanos*/
-.logoMenu {
-    width: 40px;   
+a:hover {
+    color: white;
 }
-.logo{
+
+.logoMenu {
+    width: 40px;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.logo {
     padding: 30px;
 }
-.logo a h1{
+
+.logo a h1 {
     display: inline-block;
+    font-size: 5px;
 }
+
 nav {
     position: sticky;
     top: 0px;
 }
 
-.menu li {
-    display: inline-block;
-    padding: 10px;
-    margin: 2.5rem;
-    background-color: #00000015;
-    border-radius: 10px;
-    transition: all 0.9s ease;
-}
-
-.menu li:hover {
-    
-    background: linear-gradient(90deg, rgba(35, 37, 36, 1) 0%, rgba(20, 26, 31, 0.6983758700696056) 0%, rgba(35, 70, 98, 1) 67%, rgba(20, 26, 31, 0.47795823665893267) 100%);
-    box-shadow: 0 7px 10px #235a8873;
-    transform: scale(1.07);
-    cursor: pointer;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0px;
+header {
     background-color: #050e14de;
-    position: sticky;
-    top: 0%;
     box-shadow:
         0px 0.4px 0.6px rgba(0, 0, 0, 0.039),
         0px 1.1px 1.4px rgba(0, 0, 0, 0.057),
@@ -77,6 +62,8 @@ nav {
         0px 16px 21px rgba(0, 0, 0, 0.14);
 }
 
+
+/*Comienzo de css pagina contactanos*/
 .form {
     text-align: center;
     margin: 2rem auto;
@@ -128,12 +115,12 @@ textarea {
     background-color: #3088cf;
     color: white;
     width: 90px;
-    
+
 }
 
 .boton:hover {
     background-color: #aed6f7;
-    color: black;
+    color: rgb(255, 254, 254);
     transition: 0.5s;
 }
 
@@ -188,36 +175,49 @@ textarea {
     bottom: 20px;
     bottom: 0px;
     width: 100%;
-    height: 125px;
+    height: 100%;
 }
 
 .copy {
-    margin: 1rem;
+    margin: 1rem auto;
     font-size: small;
+    width: 100%;
+    align-items: center;
 }
 
 /*final de css pagina contactanos*/
 /*Comienzo css Index*/
 
 
+
 .botonNftIndex button {
-    border-radius: 10px;
-    padding: 5px;
-    background-color: #3088cf;
-    color: white;
+    padding: 5px 10px;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: rgb(19, 200, 212);
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.8s ease 0s;
     cursor: pointer;
-    border: none;
+    outline: none;
+  }
+  
+  .botonNftIndex button:hover {
+    background-color: #23c483;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
+  
+  .botonNftIndex button:active {
+    transform: translateY(-1px);
+  }
 
 
-}
-
-.botonNftIndex button:hover {
-    transform: translateY(-7%);
-    box-shadow: 0 2px 12px white;
-    border: solid 2px #3088cf;
-    transition: all 0.5s ease;
-    border: none;
-}
 
 .imgIndex1 {
     display: flex;
@@ -275,7 +275,7 @@ textarea {
 .card:hover {
     box-shadow: 0px 3px 20px #3088cf;
     transform: translateY(-3%);
-    
+
 }
 
 .card .contenido {
@@ -307,7 +307,7 @@ textarea {
 }
 
 .card .contenido a:hover {
-    
+
     background-color: #6da6d4;
     box-shadow: 0 1px 9px white;
 }
@@ -344,7 +344,7 @@ section .titulo {
 .listaCategoria li:hover {
     box-shadow: 0 5px 16px #c61ae9;
     transform: translateY(-9%);
-    
+
 }
 
 .categorias {
@@ -429,7 +429,7 @@ section .titulo {
 
 .moneda:hover {
     transform: translateY(-3%);
-    
+
 }
 
 .videoTutorial {
@@ -438,7 +438,8 @@ section .titulo {
 }
 
 .videoTutorial iframe {
-    width: 650px;
+    width: 100%;
+    max-width: 550px;
     height: 400px;
 }
 
@@ -530,13 +531,11 @@ section .titulo {
 
 }
 
-.vistaPrevia .card {
-    left: 25%;
-}
+
 
 .vistaPrevia .card {
     text-align: center;
-    margin: 2rem auto;
+
     padding: 1rem;
     border: #00ff9d49;
     border-style: solid;
@@ -545,6 +544,7 @@ section .titulo {
     max-width: 300px;
     flex-direction: column;
     border-radius: 10px;
+    align-items: center;
 }
 
 .vistaPrevia .card .botonNft {
@@ -743,7 +743,7 @@ section .titulo {
 
     div .nftIndexImg {
         width: 100%;
-        padding-left: 50px;
+        padding-left: 115px;
     }
 
     .pie .listaFooter {
@@ -911,7 +911,7 @@ section .titulo {
         grid-area: vender;
         font-size: 15px;
         width: 300px;
-        height: 750px;
+        
         align-items: center;
         margin: 0 auto;
         margin-bottom: 10px;
@@ -919,7 +919,7 @@ section .titulo {
 
     .tycVenderp {
         grid-area: tycVenderp;
-        margin: 10px;
+        margin: 10px auto;
     }
 
     .vistaPrevia {
@@ -970,33 +970,115 @@ section .titulo {
         width: 390px;
 
     }
-    .categorias{
+
+    .categorias {
         margin: 0px;
         padding: 10px;
     }
-    .categorias .card{
+
+    .categorias .card {
         height: 210px;
     }
-    .categorias .card img{
+
+    .categorias .card img {
         width: 90px;
         height: 70px;
     }
-    .categorias .card p{
+
+    .categorias .card p {
         width: 50px;
         font-size: 8px;
     }
-    .categorias .card h3{
+
+    .categorias .card h3 {
         font-size: small;
     }
-    .categorias .card a{
+
+    .categorias .card a {
         font-size: small;
         text-align: left;
     }
-    .categorias .card .contenido{
+
+    .categorias .card .contenido {
         width: 60px;
-        
+
     }
-    .categoriaNft{
+
+    .categoriaNft {
         font-size: 10px;
     }
+}
+
+/*Bootstrap*/
+nav {
+    background-color: #050e1462;
+}
+
+nav h1 {
+    font-size: 20px;
+}
+
+nav .logoMenu {
+    margin-left: 20px;
+}
+
+.btnNav {
+    background-color: rgba(97, 70, 104, 0.623);
+    border: none;
+}
+
+.offcanvasBg {
+    background-color: #050e14de;
+}
+
+.btnoff {
+    filter: invert(100%);
+}
+
+.menuUl li {
+    --color: #560bad;
+    margin: 20px;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid var(--color);
+    transition: color .5s;
+    z-index: 1;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 9px;
+    font-weight: 500;
+    color: var(--color);
+    margin-right: 60px;
+}
+
+.menuUl li:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    background: var(--color);
+    height: 150px;
+    width: 200px;
+    border-radius: 50%;
+}
+
+.menuUl li:before {
+    top: 100%;
+    left: 100%;
+    transition: all .7s;
+}
+
+.menuUl li:hover:before {
+    top: -30px;
+    left: -30px;
+}
+
+.nftIndexImg{
+    padding-left: 250px;
+}
+.nftIndex{
+    height: 300px;
+}
+.vistaCard{
+    align-items: center;
+    margin: 0 auto;
 }
