--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,6 @@ a:hover {
     font-size: 5px;
 }
 
-nav {
-    position: sticky;
-    top: 0px;
-}
-
 header {
     background-color: #050e14de;
     box-shadow:
@@ -61,7 +56,6 @@ header {
         0px 6.7px 8.8px rgba(0, 0, 0, 0.101),
         0px 16px 21px rgba(0, 0, 0, 0.14);
 }
-
 
 /*Comienzo de css pagina contactanos*/
 .form {
@@ -74,12 +68,12 @@ header {
     max-width: 350px;
     box-shadow: 0 10px 20px #014f8ba9;
     border-radius: 10px;
+    transition: 1s;
 }
 
 .form:hover {
     background-color: rgba(9, 71, 71, 0.712);
     box-shadow: 0 15px 25px #235a88;
-    transition: 1s;
 }
 
 input {
@@ -115,13 +109,12 @@ textarea {
     background-color: #3088cf;
     color: white;
     width: 90px;
-
+    transition: 0.5s;
 }
 
 .boton:hover {
     background-color: #aed6f7;
     color: rgb(255, 254, 254);
-    transition: 0.5s;
 }
 
 .descripcion {
@@ -141,12 +134,12 @@ textarea {
     width: 40px;
     padding: 0.2rem;
     margin: 1.1rem;
+    transition: 0.8s;
 }
 
 .socials img:hover {
-    box-shadow: 0px 2px 10px #096939;
+    box-shadow: 0px 0px 10px #096939;
     border-radius: 2rem;
-    transition: 0.8s;
 }
 
 .listaFooter li {
@@ -162,11 +155,11 @@ textarea {
     width: 20px;
     filter: blur(3px);
     margin: 7px;
+    transition: 0.5s;
 }
 
 .logoAbajo:hover {
     filter: blur(0px);
-    transition: 0.5s;
 }
 
 .pie {
@@ -187,9 +180,6 @@ textarea {
 
 /*final de css pagina contactanos*/
 /*Comienzo css Index*/
-
-
-
 .botonNftIndex button {
     padding: 5px 10px;
     font-size: 12px;
@@ -200,24 +190,21 @@ textarea {
     background-color: rgb(19, 200, 212);
     border: none;
     border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.8s ease 0s;
     cursor: pointer;
     outline: none;
-  }
-  
-  .botonNftIndex button:hover {
+}
+
+.botonNftIndex button:hover {
     background-color: #23c483;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: #fff;
     transform: translateY(-7px);
-  }
-  
-  .botonNftIndex button:active {
+}
+
+.botonNftIndex button:active {
     transform: translateY(-1px);
-  }
-
-
+}
 
 .imgIndex1 {
     display: flex;
@@ -264,18 +251,23 @@ textarea {
     box-shadow: 0px 3px 15px #235a88;
     cursor: default;
     transition: all 0.7s ease;
-
-}
-
-.card img {
-
-    width: 250px;
 }
 
 .card:hover {
     box-shadow: 0px 3px 20px #3088cf;
     transform: translateY(-3%);
+}
 
+.card img {
+    align-items: center;
+    margin: 0 auto;
+    width: 250px;
+}
+
+.card h3 {
+    text-align: center;
+    font-weight: 550;
+    padding: 5px;
 }
 
 .card .contenido {
@@ -283,13 +275,6 @@ textarea {
     height: 130px;
     padding: 7px;
 
-}
-
-.card h3 {
-    text-align: center;
-    font-weight: 550;
-
-    padding: 5px;
 }
 
 .card .contenido p {
@@ -307,18 +292,15 @@ textarea {
 }
 
 .card .contenido a:hover {
-
     background-color: #6da6d4;
     box-shadow: 0 1px 9px white;
 }
 
 /*Fin de css Index*/
 /*Comienzo css Categorias*/
-
 section .titulo {
-    margin-top: 20px;
+    margin-top: 20px auto;
     text-align: center;
-
 }
 
 .listaCategoria {
@@ -330,7 +312,6 @@ section .titulo {
 }
 
 .listaCategoria li {
-
     width: 100px;
     margin: 20px auto;
     padding: 5px;
@@ -419,17 +400,16 @@ section .titulo {
     margin-top: 5px;
 }
 
-.moneda p {
+.pMoneda {
     width: 160px;
     font-size: medium;
-    font-weight: 100;
+    font-weight: 7px;
     margin-top: 15px;
 
 }
 
 .moneda:hover {
     transform: translateY(-3%);
-
 }
 
 .videoTutorial {
@@ -503,7 +483,6 @@ section .titulo {
     width: 200px;
     margin-bottom: 10px;
 }
-
 .precioDeNft {
     text-align: center;
     margin: 0 auto;
@@ -512,12 +491,10 @@ section .titulo {
     flex-direction: column;
     width: 200px;
 }
-
 .precioDeNft .precioUsd {
     background-color: #141a1f;
     border: 3px solid #684170a8;
 }
-
 .tycVender {
     margin: 10px;
 }
@@ -530,9 +507,6 @@ section .titulo {
     text-align: center;
 
 }
-
-
-
 .vistaPrevia .card {
     text-align: center;
 
@@ -550,7 +524,6 @@ section .titulo {
 .vistaPrevia .card .botonNft {
     margin-top: 1rem;
 }
-
 /*grid y responsive*/
 /*index*/
 .nftIndex {
@@ -911,7 +884,7 @@ section .titulo {
         grid-area: vender;
         font-size: 15px;
         width: 300px;
-        
+
         align-items: center;
         margin: 0 auto;
         margin-bottom: 10px;
@@ -1072,13 +1045,28 @@ nav .logoMenu {
     left: -30px;
 }
 
-.nftIndexImg{
+.nftIndexImg {
     padding-left: 250px;
 }
-.nftIndex{
+
+.nftIndex {
     height: 300px;
 }
-.vistaCard{
+
+.vistaCard {
     align-items: center;
     margin: 0 auto;
+}
+/*Ajustes de nav*/
+.aInicio{
+    background-color: #560bad;
+}
+.aMedios{
+    background-color: #560bad;
+}
+.aCategorias{
+    background-color: #560bad;
+}
+.aVender{
+    background-color: #560bad;
 }
