agregando keywords, description y seo

--- a/sass/scss/pages/_index.scss
+++ b/sass/scss/pages/_index.scss
@@ -56,12 +56,14 @@
     }
 }
 
-
-
+@mixin card($w, $m, $br){
+    width: $w;
+    margin: $m;
+    border-radius: $br;
+}
 .card {
-    width: 240px;
-    margin: 10px;
-    border-radius: 14px;
+    @include card(240px, 10px, 14px);
+
     overflow: hidden;
     background: rgb(35, 37, 36);
     background: linear-gradient(90deg, rgba(35, 37, 36, 1) 0%, rgba(37, 7, 54, 1) 0%, rgba(94, 35, 194, 1) 50%, rgba(38, 8, 57, 1) 100%);
