--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  background-image: url(../imagenes/low-poly-grid-haikei.svg);
+  background-image: url(/imagenes/low-poly-grid-haikei.svg);
   color: white;
   font-family: "Raleway", sans-serif;
   min-height: 100%;
@@ -573,7 +573,7 @@ section .titulo {
 }
 .mediosDePago .moneda .pMoneda {
   width: 160px;
-  font-size: medium;
+  font-size: 15px;
   font-weight: 7px;
   margin-top: 15px;
 }
@@ -658,6 +658,29 @@ section .titulo {
 }
 .formVender .tycVender div {
   margin: 10px;
+}
+.formVender button {
+  padding: 5px 10px;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: rgb(19, 200, 212);
+  border: none;
+  border-radius: 45px;
+  transition: all 0.8s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+.formVender button:hover {
+  background-color: #23c483;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+.formVender button .botonNftIndex button:active {
+  transform: translateY(-1px);
 }
 
 .vistaPrevia {
@@ -873,6 +896,18 @@ section .titulo {
     align-items: center;
     margin: 0 auto;
   }
+  .card {
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    text-align: center;
+  }
+  .card p {
+    width: 100px;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 10px;
+  }
   .allCategorias {
     grid-area: allCategorias;
   }
@@ -885,6 +920,7 @@ section .titulo {
   }
   .categorias .card {
     height: 210px;
+    overflow: hidden;
   }
   .categorias .card img {
     width: 90px;
@@ -892,13 +928,13 @@ section .titulo {
   }
   .categorias .card p {
     width: 50px;
-    font-size: 8px;
+    font-size: 5px;
   }
   .categorias .card h3 {
     font-size: small;
   }
   .categorias .card a {
-    font-size: small;
+    font-size: 6px;
     text-align: left;
   }
   .categorias .card .contenido {
