--- a/sass/scss/base/_medias.scss
+++ b/sass/scss/base/_medias.scss
@@ -251,7 +251,19 @@
         margin: 0 auto;
 
     }
-
+    .card{
+        display: flex;
+        overflow:hidden;
+        align-items: center;
+        text-align: center;
+        p{
+            width: 100px;
+            text-align: center;
+            margin: 0 auto;
+            font-size:10px;
+        }
+    }
+    
     .allCategorias {
         grid-area: allCategorias;
     }
@@ -268,6 +280,7 @@
 
     .categorias .card {
         height: 210px;
+        overflow: hidden;
     }
 
     .categorias .card img {
@@ -277,7 +290,7 @@
 
     .categorias .card p {
         width: 50px;
-        font-size: 8px;
+        font-size: 5px;
     }
 
     .categorias .card h3 {
@@ -285,7 +298,7 @@
     }
 
     .categorias .card a {
-        font-size: small;
+        font-size: 6px;
         text-align: left;
     }
 
