--- a/sass/scss/pages/_mediosdepago.scss
+++ b/sass/scss/pages/_mediosdepago.scss
@@ -32,7 +32,7 @@
         }
         .pMoneda {
             width: 160px;
-            font-size: medium;
+            font-size: 15px;
             font-weight: 7px;
             margin-top: 15px;
         
