--- a/sass/scss/pages/_vender.scss
+++ b/sass/scss/pages/_vender.scss
@@ -72,6 +72,31 @@
             margin: 10px;
         }
     }
+    button {
+        padding: 5px 10px;
+        font-size: 12px;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+        font-weight: 500;
+        color: #000;
+        background-color: rgb(19, 200, 212);
+        border: none;
+        border-radius: 45px;
+        transition: all 0.8s ease 0s;
+        cursor: pointer;
+        outline: none;
+    
+        &:hover {
+            background-color: #23c483;
+            box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+            color: #fff;
+            transform: translateY(-7px);
+        }
+    
+        .botonNftIndex button:active {
+            transform: translateY(-1px);
+        }
+    }
 }
 .vistaPrevia {
     text-align: center;
